[gd_scene load_steps=4 format=3 uid="uid://crcpdx8hgtsf2"]

[ext_resource type="Script" path="res://Scenes/WeaponAttachment/WeaponAttachment.gd" id="1_aounc"]
[ext_resource type="Texture2D" uid="uid://b14c2jwv51gcb" path="res://icon.svg" id="2_h5kar"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3st7"]
size = Vector2(71, 70)

[node name="WeaponAttachment" type="Node2D"]
script = ExtResource("1_aounc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h5kar")

[node name="ClickDetector" type="Button" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_p3st7")

[node name="ColorRect" type="ColorRect" parent="Sprite2D/Area2D"]
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(35, 35)
color = Color(1, 0, 0, 0.337255)

[connection signal="button_down" from="Sprite2D/ClickDetector" to="." method="_on_click_detector_button_down"]
[connection signal="button_up" from="Sprite2D/ClickDetector" to="." method="_on_click_detector_button_up"]
[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_exited"]
